# individkaTPPO

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
src/client/: main.cpp
src/protoFiles/: chatBot.proto
src/server/: main.cpp
